<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddClient"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="7dp"
                android:text="@string/agregar"
                android:textSize="32sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/nombres" />

            <EditText
                android:id="@+id/et_nombresAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:digits="qwertzuiopasdfghjklyxcvbnmñ, ,QWERTZUIOPASDFGHJKLYXCVBNMÑ"
                android:hint=""
                android:inputType="text"
                android:maxLength="35"
                android:maxLines="1"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/apellidos" />

            <EditText
                android:id="@+id/et_apellidosAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:digits="qwertzuiopasdfghjklyxcvbnmñ, ,QWERTZUIOPASDFGHJKLYXCVBNMÑ"
                android:inputType="text"
                android:maxLength="35"
                android:maxLines="1"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/dui" />

            <EditText
                android:id="@+id/et_duiAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:digits="0,1,2,3,4,5,6,7,8,9,-"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/nit" />

            <EditText
                android:id="@+id/et_nitAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:digits="0,1,2,3,4,5,6,7,8,9,-"
                android:inputType="number"
                android:maxLength="17"
                android:maxLines="1"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/direccion" />

            <EditText
                android:id="@+id/et_direccionAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:digits="qwertzuiopasdfghjklyxcvbnmñ, ,QWERTZUIOPASDFGHJKLYXCVBNMÑ,0,1,2,3,4,5,6,7,8,9,-,."
                android:inputType="text"
                android:maxLength="125"
                android:maxLines="2"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/telefono" />

            <EditText
                android:id="@+id/et_telefonoAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:digits="0,1,2,3,4,5,6,7,8,9,-"
                android:inputType="number"
                android:maxLength="9"
                android:maxLines="1"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/correo" />

            <EditText
                android:id="@+id/et_correoAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:digits="qwertzuiopasdfghjklyxcvbnmñ,QWERTZUIOPASDFGHJKLYXCVBNMÑ,0,1,2,3,4,5,6,7,8,9,-,.,@,_"
                android:inputType="textEmailAddress"
                android:maxLength="120"
                android:maxLines="1"
                android:text="" />

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="7dp"
                android:background="@color/Green"
                android:onClick="validateCli"
                android:text="@string/guardar" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>