<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".EditClient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:src="@drawable/enlace" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="7dp"
            android:text="@string/editar"
            android:textSize="32sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/nombres" />

            <EditText
                android:id="@+id/et_nombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:digits="qwertzuiopasdfghjklyxcvbnmñ, ,QWERTZUIOPASDFGHJKLYXCVBNMÑ"
                android:hint=""
                android:inputType="text"
                android:maxLength="35"
                android:maxLines="1"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/apellidos" />

            <EditText
                android:id="@+id/et_apellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:digits="qwertzuiopasdfghjklyxcvbnmñ, ,QWERTZUIOPASDFGHJKLYXCVBNMÑ"
                android:inputType="text"
                android:maxLength="35"
                android:maxLines="1"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/dui" />

            <EditText
                android:id="@+id/et_dui"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:digits="0,1,2,3,4,5,6,7,8,9,-"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/nit" />

            <EditText
                android:id="@+id/et_nit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:digits="0,1,2,3,4,5,6,7,8,9,-"
                android:inputType="number"
                android:maxLength="17"
                android:maxLines="1"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/direccion" />

            <EditText
                android:id="@+id/et_direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:digits="qwertzuiopasdfghjklyxcvbnmñ, ,QWERTZUIOPASDFGHJKLYXCVBNMÑ,0,1,2,3,4,5,6,7,8,9,-,."
                android:inputType="text"
                android:maxLength="125"
                android:maxLines="2"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/telefono" />

            <EditText
                android:id="@+id/et_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:digits="0,1,2,3,4,5,6,7,8,9,-"
                android:inputType="number"
                android:maxLength="9"
                android:maxLines="1"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/correo" />

            <EditText
                android:id="@+id/et_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:digits="qwertzuiopasdfghjklyxcvbnmñ,QWERTZUIOPASDFGHJKLYXCVBNMÑ,0,1,2,3,4,5,6,7,8,9,-,.,@,_"
                android:inputType="textEmailAddress"
                android:maxLength="120"
                android:maxLines="1"
                android:text="" />

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="7dp"
                android:background="@color/Green"
                android:onClick="validate"
                android:text="@string/guardar" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>